// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClosedBriefs renders with no props 1`] = `
<section>
  <h2
    className="au-display-lg"
  >
    Closed briefs
  </h2>
  You don't have any closed briefs.
</section>
`;

exports[`ClosedBriefs renders with props 1`] = `
<section>
  <h2
    className="au-display-lg"
  >
    Closed briefs
  </h2>
  <table
    styleName="brief-table summary-item-body"
  >
    <thead
      styleName="summary-item-field-heading"
    >
      <tr>
        <th
          styleName="left-header"
        >
          Brief Overview
        </th>
        <th
          styleName="center-header"
        >
          Closed
        </th>
        <th
          styleName="right-header"
        >
          Work Order
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="summary-item-row"
      >
        <td
          styleName="item-field-first-full"
        >
          <h5
            className="au-display-xs"
          >
            Brief preview
          </h5>
          <a
            href="/buyers/frameworks/digital-service-professionals/requirements/digital-outcome/119"
          >
            Matts Brief
          </a>
        </td>
        <td
          styleName="item-field-second-left"
        >
          <h5
            className="au-display-xs"
          >
            Closed
          </h5>
          Invalid Date
        </td>
        <td
          styleName="item-field-third-right"
        >
          <h5
            className="au-display-xs"
          >
            Work order
          </h5>
          <span>
            <a
              href="/buyers/frameworks/digital-service-professionals/requirements/digital-outcome/119/responses"
            >
              View responses 
            </a>
          </span>
          <span>
            <a
              href="/buyers/frameworks/digital-service-professionals/requirements/digital-outcome/119/work-orders/create"
            >
              Create work order
            </a>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</section>
`;

exports[`DraftBriefs renders with no props 1`] = `
<section>
  <h2
    className="au-display-lg"
  >
    Drafts
  </h2>
  You haven't started any opportunities.
</section>
`;

exports[`DraftBriefs renders with props 1`] = `
<section>
  <h2
    className="au-display-lg"
  >
    Drafts
  </h2>
  <table
    styleName="brief-table summary-item-body"
  >
    <thead
      styleName="summary-item-field-heading"
    >
      <tr>
        <th
          styleName="left-header"
        >
          Brief Overview
        </th>
        <th
          styleName="center-header"
        >
          Created
        </th>
        <th
          styleName="right-header"
        >
          Questions left
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="summary-item-row"
      >
        <td
          styleName="item-field-first-full"
        >
          <h5
            className="au-display-xs"
          >
            Brief overview
          </h5>
          <a
            href="/buyers/frameworks/digital-service-professionals/requirements/digital-outcome/119"
          >
            Matts Brief
          </a>
        </td>
        <td
          styleName="item-field-second-left"
        >
          <h5
            className="au-display-xs"
          >
            Created
          </h5>
          Thursday 6 October 2016
        </td>
        <td
          styleName="item-field-third-right"
        >
          <h5
            className="au-display-xs"
          >
            Questions left
          </h5>
          <div>
            17
             required
          </div>
          <div>
            7
             optional
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</section>
`;

exports[`LiveBriefs renders with no props 1`] = `
<section
  styleName="live-brief-container"
>
  <h2
    className="au-display-lg"
  >
    Live briefs
  </h2>
  You don't have any live briefs.
</section>
`;

exports[`LiveBriefs renders with props 1`] = `
<section
  styleName="live-brief-container"
>
  <h2
    className="au-display-lg"
  >
    Live briefs
  </h2>
  <table
    styleName="brief-table summary-item-body"
  >
    <thead
      styleName="summary-item-field-heading"
    >
      <tr>
        <th
          styleName="left-header"
        >
          Brief Overview
        </th>
        <th
          styleName="center-header"
        >
          Closing
        </th>
        <th
          styleName="right-header"
        >
          Q&A
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="summary-item-row"
      >
        <td
          styleName="item-field-first-full"
        >
          <h5
            className="au-display-xs"
          >
            Brief preview
          </h5>
          <a
            href="/2/brief/119/published"
          >
            Matts Brief
          </a>
        </td>
        <td
          styleName="item-field-second-left"
        >
          <h5
            className="au-display-xs"
          >
            Closing
          </h5>
          Invalid Date
        </td>
        <td
          styleName="item-field-third-right"
        >
          <h5
            className="au-display-xs"
          >
            Q&A
          </h5>
          <a
            href="/buyers/frameworks/digital-marketplace/requirements/digital-outcome/119/supplier-questions"
          >
            Answer a question
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</section>
`;
